{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 71,
  "lineage": "9ec1db7a-d680-fa6c-3f7b-d92e4de1805f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396260462264:internet-gateway/igw-0b6b83a6b24af3678",
            "id": "igw-0b6b83a6b24af3678",
            "owner_id": "396260462264",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-igw",
              "Project": "GoodSeed"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-igw",
              "Project": "GoodSeed"
            },
            "vpc_id": "vpc-0ade2ffcc3dd8e7b7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:396260462264:loadbalancer/app/goodseed-free-alb/ea284ee0229d2456",
            "arn_suffix": "app/goodseed-free-alb/ea284ee0229d2456",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "goodseed-free-alb-1825640970.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:396260462264:loadbalancer/app/goodseed-free-alb/ea284ee0229d2456",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "goodseed-free-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02cfc21a87a258d70"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00c3e80ea37fff186"
              },
              {
                "subnet_id": "subnet-09bf8c380ec8196ca"
              }
            ],
            "subnets": [
              "subnet-00c3e80ea37fff186",
              "subnet-09bf8c380ec8196ca"
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-alb",
              "Project": "GoodSeed"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-alb",
              "Project": "GoodSeed"
            },
            "vpc_id": "vpc-0ade2ffcc3dd8e7b7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:396260462264:listener/app/goodseed-free-alb/ea284ee0229d2456/67bd6c952e5abd36",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:396260462264:targetgroup/goodseed-free-tg/a962c386c00a9ae1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:396260462264:listener/app/goodseed-free-alb/ea284ee0229d2456/67bd6c952e5abd36",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:396260462264:loadbalancer/app/goodseed-free-alb/ea284ee0229d2456",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "free-tier",
              "ManagedBy": "Terraform",
              "Project": "GoodSeed"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:396260462264:targetgroup/goodseed-free-tg/a962c386c00a9ae1",
            "arn_suffix": "targetgroup/goodseed-free-tg/a962c386c00a9ae1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:396260462264:targetgroup/goodseed-free-tg/a962c386c00a9ae1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:396260462264:loadbalancer/app/goodseed-free-alb/ea284ee0229d2456"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "goodseed-free-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-tg",
              "Project": "GoodSeed"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-tg",
              "Project": "GoodSeed"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ade2ffcc3dd8e7b7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396260462264:route-table/rtb-04951892990932451",
            "id": "rtb-04951892990932451",
            "owner_id": "396260462264",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-private-rt",
              "Project": "GoodSeed"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-private-rt",
              "Project": "GoodSeed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ade2ffcc3dd8e7b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396260462264:route-table/rtb-0ac5aabbcc1e4e6f7",
            "id": "rtb-0ac5aabbcc1e4e6f7",
            "owner_id": "396260462264",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b6b83a6b24af3678",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-public-rt",
              "Project": "GoodSeed"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-public-rt",
              "Project": "GoodSeed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ade2ffcc3dd8e7b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0680d9afebe238c68",
            "route_table_id": "rtb-04951892990932451",
            "subnet_id": "subnet-00c597bcd104c0c8a"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aeb65f08fb62a3bb",
            "route_table_id": "rtb-04951892990932451",
            "subnet_id": "subnet-03b121384b14f7309"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0438308933482aba1",
            "route_table_id": "rtb-0ac5aabbcc1e4e6f7",
            "subnet_id": "subnet-00c3e80ea37fff186"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c32e095e80d73a9",
            "route_table_id": "rtb-0ac5aabbcc1e4e6f7",
            "subnet_id": "subnet-09bf8c380ec8196ca"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396260462264:security-group/sg-02cfc21a87a258d70",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02cfc21a87a258d70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "goodseed-free-alb-20251224214144779200000003",
            "name_prefix": "goodseed-free-alb-",
            "owner_id": "396260462264",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-alb-sg",
              "Project": "GoodSeed"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-alb-sg",
              "Project": "GoodSeed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ade2ffcc3dd8e7b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396260462264:security-group/sg-0a31204372c708be3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a31204372c708be3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02cfc21a87a258d70"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "goodseed-free-ecs-tasks-20251224214148181500000005",
            "name_prefix": "goodseed-free-ecs-tasks-",
            "owner_id": "396260462264",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "goodseed-free-ecs-tasks-sg"
            },
            "tags_all": {
              "Environment": "free-tier",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-ecs-tasks-sg",
              "Project": "GoodSeed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ade2ffcc3dd8e7b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396260462264:security-group/sg-0bebcdbe067b02a61",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bebcdbe067b02a61",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from ECS",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a31204372c708be3"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "goodseed-free-elasticache-20251224221712255600000001",
            "name_prefix": "goodseed-free-elasticache-",
            "owner_id": "396260462264",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-elasticache-sg",
              "Project": "GoodSeed"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-elasticache-sg",
              "Project": "GoodSeed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ade2ffcc3dd8e7b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396260462264:security-group/sg-000fff903c06c1f4a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000fff903c06c1f4a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "PostgreSQL from Internet (TEMPORARY)",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from ECS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a31204372c708be3"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "goodseed-free-rds-20251224214151291200000006",
            "name_prefix": "goodseed-free-rds-",
            "owner_id": "396260462264",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-rds-sg",
              "Project": "GoodSeed"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-rds-sg",
              "Project": "GoodSeed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ade2ffcc3dd8e7b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396260462264:subnet/subnet-00c597bcd104c0c8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c597bcd104c0c8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396260462264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-private-1",
              "Project": "GoodSeed",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-private-1",
              "Project": "GoodSeed",
              "Type": "Private"
            },
            "vpc_id": "vpc-0ade2ffcc3dd8e7b7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396260462264:subnet/subnet-03b121384b14f7309",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b121384b14f7309",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396260462264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-private-2",
              "Project": "GoodSeed",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-private-2",
              "Project": "GoodSeed",
              "Type": "Private"
            },
            "vpc_id": "vpc-0ade2ffcc3dd8e7b7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396260462264:subnet/subnet-00c3e80ea37fff186",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c3e80ea37fff186",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396260462264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-public-1",
              "Project": "GoodSeed",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-public-1",
              "Project": "GoodSeed",
              "Type": "Public"
            },
            "vpc_id": "vpc-0ade2ffcc3dd8e7b7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396260462264:subnet/subnet-09bf8c380ec8196ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bf8c380ec8196ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396260462264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-public-2",
              "Project": "GoodSeed",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-public-2",
              "Project": "GoodSeed",
              "Type": "Public"
            },
            "vpc_id": "vpc-0ade2ffcc3dd8e7b7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396260462264:vpc/vpc-0ade2ffcc3dd8e7b7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a1a94aa4db79d7c7",
            "default_route_table_id": "rtb-08d7e06afc7a00350",
            "default_security_group_id": "sg-0aa2b2fbbc8fee18a",
            "dhcp_options_id": "dopt-02a34ed07dfb85357",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ade2ffcc3dd8e7b7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08d7e06afc7a00350",
            "owner_id": "396260462264",
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-vpc",
              "Project": "GoodSeed"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "goodseed-free-vpc",
              "Project": "GoodSeed"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}